using System;

namespace Primer.Timeline
{
    [Serializable]
    internal class SequencePlayable : PrimerPlayable<Sequence>
    {
    }
}
